# gec6818-lvgl

./: CMakeLists.txt  CmakeLists.txt  README.md
export/lvgl/: lv_port_disp.c  lv_port_indev.c  port.cmake
inc/: bmp.h  gps.h  gpsdata.h  graph.h  gy39.h  lcd.h  lcd_config.h  touch.h  word.h
lib/lvgl/: lv_conf.h  lvgl.cmake
src/: bmp.c  gps.c  gpsdata.c  graph.c  gy39.c  lcd.c  main.c  touch.c  word.c
